--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * mace
 
- _Simple shell script for Doom emacs, emacsclient and the daemon._
+*mace* is a simple shell script for interacting with doom emacs, emacsclient and the emacs daemon.
 _
 I will add to this script when I need to, but it will remain a simple program.
 
